--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- If installation is in subdir and pages won't load, try altering base href to /subdir/ -->
     <base href="/pushtape-cassette/"/>
     
-    <title>Pushtape Cassette</title>
-    <meta name="description" content="">
+    <title><Maslow's Basement Releases</title>
+    <meta name="description" content="Maslow's Basement">
 
     <!-- Base -->
     <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css" />
