--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         <div class="footer-text">
 
-          &copy; 2016 | Pushtape Cassette</a> 
+          &copy; 2019 | Maslow's Basement</a> 
         </div>
 
     </footer>
